--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i' rel='stylesheet' type='text/css'>
   </body>
 </html>
