add create segment design

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
-    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#fff" />
     <!--
@@ -20,8 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Accenture Song NFT meetup</title>
-    <meta name="description" content="Accenture Song NFT meetup" />
+    <title>ETH Prague hackathon app</title>
+    <meta name="description" content="ETH Prague hackathon app" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
